//! Metrics service implementation

use crate::proto::metrics::*;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::debug;

#[derive(Debug, Clone, Default)]
pub struct MetricsServiceImpl {}

impl MetricsServiceImpl {
    pub fn new() -> Self {
        Self {}
    }
}

#[tonic::async_trait]
impl metrics_service_server::MetricsService for MetricsServiceImpl {
    async fn get_metrics(&self, _req: Request<GetMetricsRequest>) -> Result<Response<GetMetricsResponse>, Status> {
        debug!("GetMetrics called");
        Ok(Response::new(GetMetricsResponse {
            metrics: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Metrics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_performance_metrics(&self, _req: Request<GetPerformanceMetricsRequest>) -> Result<Response<GetPerformanceMetricsResponse>, Status> {
        debug!("GetPerformanceMetrics called");
        Ok(Response::new(GetPerformanceMetricsResponse {
            metrics: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Performance metrics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_cost_metrics(&self, _req: Request<GetCostMetricsRequest>) -> Result<Response<GetCostMetricsResponse>, Status> {
        debug!("GetCostMetrics called");
        Ok(Response::new(GetCostMetricsResponse {
            metrics: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Cost metrics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_quality_metrics(&self, _req: Request<GetQualityMetricsRequest>) -> Result<Response<GetQualityMetricsResponse>, Status> {
        debug!("GetQualityMetrics called");
        Ok(Response::new(GetQualityMetricsResponse {
            metrics: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Quality metrics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_metrics_summary(&self, _req: Request<GetMetricsSummaryRequest>) -> Result<Response<GetMetricsSummaryResponse>, Status> {
        debug!("GetMetricsSummary called");
        Ok(Response::new(GetMetricsSummaryResponse {
            summary: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Metrics summary retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn query_metrics(&self, _req: Request<QueryMetricsRequest>) -> Result<Response<QueryMetricsResponse>, Status> {
        debug!("QueryMetrics called");
        Ok(Response::new(QueryMetricsResponse {
            results: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Query executed".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn export_metrics(&self, _req: Request<ExportMetricsRequest>) -> Result<Response<ExportMetricsResponse>, Status> {
        debug!("ExportMetrics called");
        Ok(Response::new(ExportMetricsResponse {
            data: vec![],
            format: "json".to_string(),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Metrics exported".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_metrics_analytics(&self, _req: Request<GetMetricsAnalyticsRequest>) -> Result<Response<GetMetricsAnalyticsResponse>, Status> {
        debug!("GetMetricsAnalytics called");
        Ok(Response::new(GetMetricsAnalyticsResponse {
            analytics: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Analytics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    type SubscribeMetricsStream = ReceiverStream<Result<MetricEvent, Status>>;
    async fn subscribe_metrics(&self, _req: Request<SubscribeMetricsRequest>) -> Result<Response<Self::SubscribeMetricsStream>, Status> {
        debug!("SubscribeMetrics called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    type SubscribePerformanceMetricsStream = ReceiverStream<Result<PerformanceMetricsEvent, Status>>;
    async fn subscribe_performance_metrics(&self, _req: Request<SubscribePerformanceMetricsRequest>) -> Result<Response<Self::SubscribePerformanceMetricsStream>, Status> {
        debug!("SubscribePerformanceMetrics called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    type SubscribeCostMetricsStream = ReceiverStream<Result<CostMetricsEvent, Status>>;
    async fn subscribe_cost_metrics(&self, _req: Request<SubscribeCostMetricsRequest>) -> Result<Response<Self::SubscribeCostMetricsStream>, Status> {
        debug!("SubscribeCostMetrics called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    type SubscribeAlertsStream = ReceiverStream<Result<AlertEvent, Status>>;
    async fn subscribe_alerts(&self, _req: Request<SubscribeAlertsRequest>) -> Result<Response<Self::SubscribeAlertsStream>, Status> {
        debug!("SubscribeAlerts called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    async fn record_metrics(&self, _req: Request<tonic::Streaming<RecordMetricsRequest>>) -> Result<Response<RecordMetricsResponse>, Status> {
        debug!("RecordMetrics called");
        Ok(Response::new(RecordMetricsResponse {
            recorded: 0,
            failed: 0,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Metrics recorded".to_string(),
                errors: vec![],
            }),
        }))
    }
}
